Mejorando opciones predeterminadas

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 venv/*
 /venv
 
-/config.json/
-config.json/
 /config.json
-src/client/apps/utils/config.json 
+config.json
+/src/client/apps/utils/config.json
 
 test/*
 
